# stereo_visual_odometry

./: CMakeLists.txt  Dockerfile  README.md  package.xml  valgrind_log.txt
include/visual_odometry/: frontend.hpp  parse_KITTI.hpp  visualizer.hpp
include/visual_odometry/sensor/: camera.hpp  context.hpp  feature.hpp  frame.hpp  map.hpp  map_point.hpp
include/visual_odometry/solve/: detector.hpp  estimator.hpp  matcher.hpp  optimizer.hpp  triangulator.hpp
launch/: vo_launch.py
rviz/: default_config.rviz  moving_config.rviz  rviz_config.rviz
src/: frontend.cpp  main.cpp  parse_KITTI.cpp  valgrind_main.cpp  visualizer.cpp
src/sensor/: frame.cpp  map.cpp
src/solve/: detector.cpp  estimator.cpp  matcher.cpp  optimizer.cpp  triangulator.cpp
test/: CMakeLists.txt  ba_data.txt  ba_test.cpp  ba_test.h  detector_test.cpp  rviz_ba_test.rviz  sophus_test.cpp  test.cpp  valgrind_main.cpp
